--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -2,13 +2,7 @@
 <html>
 
 <head>
-    <title>MARVEL</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/modules.css">
-    <link rel="stylesheet" href="css/nav1.css"> 
-
+   <%- include('../../layout/head') %> 
 </head>
 
 <body>
