--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lab 1</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/modules.css">
-    <link rel="stylesheet" href="css/nav1.css"> 
+  <%- include('layout/head') %> 
 </head>
 <body>
     <header>    <img src="img/logo.png" alt="MARVELATION" id="pLogo">
