--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
     
           <!--============================================-->
           <li class="ss-navs-item">
-            <a id="ss-calender" href="/" class="nav-link">
+            <a id="ss-calender" href="#" class="nav-link">
                 <svg height="30" width="200">
                     <text x="0" y="30" fill="white">1</text>
                   </svg>
