added the function of add marble using database and delete function

--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -111,6 +111,14 @@
 
                 <p class="booktitle"> Description :  <%= data.description %></p><br><br>
                 <p class="booktitle">Modified :   <%= data.modified %></p><br><br>
+                <form action ='/addmarvel' method="POST" class="marveltitle">
+                  <input type="hidden" name="name" value="<%=data.name%>"/>
+                  <input type="hidden" name="image" value="<%=data.thumbnail%>"/>
+                  <input type="hidden" name="desc" value="<%=data.description%>"/>
+                  <button class="marveltitle" type="submit"> Save This Marvel </button>
+
+      
+              </form>
                 <!-- <p class="booktitle">resourceURI <%= data.resourceURI %></p> -->
                 <!-- <p class="bookauthor"> urls <%=data.urls%></p> -->
             </div><br>
@@ -129,11 +137,6 @@
         %>
         </ol>
 
-
-
-
-
-           
         </div><br><br>
 
 
