--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -192,6 +192,37 @@ font-weight: bolder;
               height: 500px;
  
           }
+
+          .m-image{
+            width:150px;
+            height:200px;
+          margin-right: 40px;
+            border-radius: 300px;
+            margin-bottom: 20px;
+            margin-top: 40px;
+           float: right;
+           align-items: center;
+        }
+
+        .m-title{
+            width:170px;
+            margin-left: 180px;
+            margin-top: 20px;
+            float: left;
+            text-align: center;
+            border-radius: 30px;
+            
+
+        }
+
+      .allbox{
+          margin-bottom: 10px;
+          
+      }
+      
+        
+    
+
             /* tablet */
 @media screen and (min-width:560px){
     main{
