--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,6 +99,30 @@
                     <button id=button> Search The MARVEL API</button><br><br>
                   </form>
                 </div></div>
+
+                <div class="center">
+                  <% if(marvels){ marvels.forEach(
+                    (marvel) => { console.log(marvel); %>
+                      <img class="m-image" src=<%=marvel.image %>><br>
+                      <p class="m-title">Name :  <%= marvel.name %></p><br><br>
+                      <p class="m-title"> Description :  <%= marvel.description %></p><br><br>
+                      
+                <form action ='/searches' method="POST" class="booktitle">
+                  <input type="hidden" name="search" value="<%=marvel.name%>"/>
+                  <button class="m-title" type="submit"> View Details </button>
+
+      
+              </form>
+              <form action ='/delete' method="POST" class="booktitle">
+                <input type="hidden" name="id" value="<%=marvel.id%>"/>
+                <button class="m-title" type="submit"> Remove Marvel </button>
+
+    
+            </form>
+                    <%}
+
+                  );}%>
+                </div>
                     <!-- <div class="c"><p>c</p></div>
                     <div class="d"><p>d</p></div> -->
                 <!-- </div>   -->
