--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,22 +87,12 @@
                     <input id="thesearchbox" name="search" placeholder='Enter a name of marvel ' style="color: black;" />
                     <br><br>
 
-                    <!-- <label class="container">Title
-                      <input type="radio" name="searchtype" value="title">
-                      <span class="checking"></span>
-                    </label>
-              
-                    <label class="container">Author
-                      <input type="radio" name="searchtype" value="author">
-                      <span class="checking"></span>
-                    </label> -->
 
                     <button id=button> Search The MARVEL API</button><br><br>
-                    <<<<<<< HEAD </form>
+                     </form>
             </div>
         </div>
-        <!-- <div class="c"><p>c</p></div>
-=======
+        
                   </form>
                 </div></div>
 
@@ -119,30 +109,14 @@
 
       
               </form>
-              <form action ='/delete' method="POST" class="booktitle">
+               <form action ='/delete' method="POST" class="booktitle">
                 <input type="hidden" name="id" value="<%=marvel.id%>"/>
-                <button class="m-title" type="submit"> Remove Marvel </button>
+                <button class="m-title" type="submit"> Remove Marvel </button> 
 
     
             </form>
-                    <%}
-
-                  );}%>
-                </div>
-                    <!-- <div class="c"><p>c</p></div>
->>>>>>> c70a806c452ef9dac635bfb28847cf5a683d83b3
-                    <div class="d"><p>d</p></div> -->
-        <!-- </div>   -->
-        <!-- <div class='efghbox'>
-                    
-                    <div class="e"><p>e</p></div>
-                    <div class="f"><p>f</p></div>
-                    <div class="g"><p>g</p></div>
-                    <div class="h"><p>h</p></div>
-                </div> -->
-        <!--            
-            <div class="ifooter"> -->
-        <!-- </div> -->
+                    <%} );}%>
+               
     </main>
 
 </body>
