--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -27,7 +27,8 @@
             <li class="ss-navs-item">
                 <a id="ss-calender" href="/" class="nav-link">
                     <svg height="30" width="200">
-                <text x="0" y="30" fill="white">1</text>
+                <text x="0" y="30" fill="white">
+                 H               </text>
               </svg>
                     <span class="link-text">HOME</span>
                 </a>
@@ -35,7 +36,7 @@
             <li class="ss-navs-item">
                 <a id="ss-calender" href="search" class="nav-link">
                     <svg height="30" width="200">
-                    <text x="0" y="30" fill="white">2</text>
+                    <text x="0" y="30" fill="white">S</text>
                   </svg>
                     <span class="link-text">SEARCH</span>
                 </a>
@@ -43,23 +44,23 @@
             <li class="ss-navs-item">
                 <a id="ss-calender" href="#" class="nav-link">
                     <svg height="30" width="200">
-                        <text x="0" y="30" fill="white">3</text>
+                        <text x="0" y="30" fill="white">M</text>
                       </svg>
                     <span class="link-text">MOVIES LIST</span>
                 </a>
             </li>
-            <li class="ss-navs-item">
+            <!-- <li class="ss-navs-item">
                 <a id="ss-calender" href="#" class="nav-link">
                     <svg height="30" width="200">
-                            <text x="0" y="30" fill="white">4</text>
+                            <text x="0" y="30" fill="white">A</text>
                           </svg>
                     <span class="link-text">CHAR BY GENER</span>
                 </a>
-            </li>
+            </li> -->
             <li class="ss-navs-item">
                 <a id="ss-calender" href="#" class="nav-link">
                     <svg height="30" width="200">
-                            <text x="0" y="30" fill="white">5</text>
+                            <text x="0" y="30" fill="white">A</text>
                           </svg>
                     <span class="link-text">ABOUT US</span>
                 </a>
