--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -5,7 +5,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: url(https://wallpapercave.com/wp/wp2903386.gif);
+    background-color: #131311 ;
     background-repeat: no-repeat;
     background-attachment: fixed;
     -webkit-background-size: cover;
