--- a/public/styles/nav1.css
+++ b/public/styles/nav1.css
@@ -94,7 +94,10 @@
   .ss-navs-item:last-child {
     margin-top: auto;
   }
-
+  main {
+    margin-left: 16rem;
+    padding: 1rem;
+  }
   .nav-link {
     display: flex;
     align-items: center;
@@ -218,42 +221,4 @@
       left: 0px;
     }
   }
-  /* Large screens */
-/* 
-  .dark {
-    --text-primary: #b6b6b6;
-    --text-secondary: #ececec;
-    --bg-primary: #23232e;
-    --bg-secondary: #141418;
-  }
-  
-  .light {
-    --text-primary: #1f1f1f;
-    --text-secondary: #000000;
-    --bg-primary: #ffffff;
-    --bg-secondary: #e4e4e4;
-  }
-  
-  .solar {
-    --text-primary: #576e75;
-    --text-secondary: #35535c;
-    --bg-primary: #fdf6e3;
-    --bg-secondary: #f5e5b8;
-  }
-  
-  .theme-icon {
-    display: none;
-  }
-  
-  .dark #darkIcon {
-    display: block;
-  }
-  
-  .light #lightIcon {
-    display: block;
-  }
-  
-  .solar #solarIcon {
-    display: block;
-  } */
-
+ 
