--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,5 +1,5 @@
 /* mobile */
-
+/* 
 body {
     display: flex;
     flex-direction: column;
@@ -31,7 +31,7 @@ main {
     flex-direction: column;
     text-align: center;
     height: 90%;
-}
+} */
 
 
 /* #form{
@@ -41,12 +41,12 @@ margin-bottom: 100px; */
 
 /* }  */
 
-h2 {
+/* h2 {
     color: white;
     padding-top: 5px;
     font-size: 24px;
     width: auto;
-    margin-bottom: 10px;
+    margin-bottom: 200px;
 }
 
 #thesearchbox {
@@ -180,11 +180,11 @@ ol li {
     float: left;
     margin-left: 100px;
     /* margin-right: 100px; */
-    margin-top: -450px;
+    /* margin-top: -450px;
     padding-left: 260px;
-}
+} */
 
-.booktitle {
+/* .booktitle {
     font-size: 24px;
 }
 
@@ -225,24 +225,24 @@ ol li {
 
 .allbox {
     margin-bottom: 10px;
-}
+}  */
 
 
 /* tablet */
 
-@media screen and (min-width:560px) {
+/* @media screen and (min-width:560px) {
     main {
         display: grid;
         grid-template-columns: 25% 75%;
     }
-}
+} */
 
 
 /* desktop */
 
-@media screen and (min-width:760px) and (max-width:960px) {
+/* @media screen and (min-width:760px) and (max-width:960px) {
     main {
         display: grid;
         grid-template-columns: 25% 75%;
     }
-}
+} */
