--- a/public/styles/css/layout.css
+++ b/public/styles/css/layout.css
@@ -1,9 +1,5 @@
-/* .b,.c,.d,.e,.f,.g,.h,.i{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-}
+
+
 
 .b{
   width: 100%;
@@ -25,30 +21,22 @@
   margin-top: 10px;
   opacity: 0.5;
 }
+
 .c,.d{
   width: 100%;
   height: 100%;
 }
-.efghbox{
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 50% 50%;
-  height: 50%;
+.b,.c,.d,.e,.f,.g,.h,.i{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
 }
-.e,.f,.g,.h{
-  width: 100%;
-  height: 100%;
-}
-.ifooter{
-  width: 100%;
-  height: 20%;
-} */
-
 
 
 /* tablet */
-/* @media screen and (min-width:560px) {
-  .b{
+@media screen and (min-width:560px) {
+  /* .b{
       height: 100%;
   }
   .allbox{
@@ -74,8 +62,8 @@
 } */
 
 /* desktop */
-/* @media screen and (min-width:768px) and (max-width:960px){
-  .efghbox{
+@media screen and (min-width:768px) and (max-width:960px){
+  /* .efghbox{
       display: grid;
       grid-template-columns: 25% 25% 25% 25%;
       grid-template-rows: none;
@@ -91,5 +79,11 @@
 
 } */
 
+.cd{
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: none;
+  height: 100%;
+}
 
-
+}
