--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -1,4 +1,4 @@
-
+/* 
 header{
     background-color: darkred;
     color:whitesmoke;
@@ -64,7 +64,7 @@ header{
 }
 
 /* desktop */
-@media screen and (min-width:760px) and (max-width:960px){
+/* @media screen and (min-width:760px) and (max-width:960px){
    
 header{
     background-color: darkred;
@@ -83,10 +83,10 @@ header{
 .b {
     /* background-color: rgb(17, 17, 114);
     color:whitesmoke; */
-    font-size: 20px;
+    /* font-size: 20px;
     font-weight: bold;
-}
-.c{
+} */
+/* .c{
     background-color: rgb(50, 50, 149);
     color:whitesmoke;
     font-size: 40px;
@@ -130,12 +130,12 @@ header{
     text-align: center;
     vertical-align: middle;
 }
-    
+     */
 
-} 
+/* }    */
 
 /* tablet */
-@media screen and (min-width: 560px){
+/* @media screen and (min-width: 560px){
    
 header{
     background-color: darkred;
@@ -151,10 +151,10 @@ header{
     font-size: 40px;
     font-weight: bold;
 }
-.b {
+.b { */
     /* background-color: rgb(17, 17, 114);
     color:whitesmoke; */
-    font-size: 20px;
+    /* font-size: 20px;
     font-weight: bold;
 }
 .c{
@@ -201,4 +201,4 @@ header{
     text-align: center;
     vertical-align: middle;
 }
-}
+} */
