--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,9 @@
 
 <body>
     <header> <img src="img/logo.png" alt="MARVELATION" id="pLogo">
-
         <!--create a Responsive Navbar with CSS-->
         <div class="ss-body">
             <!--create abody Navbar with CSS-->
-
             <div class="ss-navs">
                 <ul class="ss-navs-nav">
                     <li class="ss-logo">
@@ -26,11 +24,9 @@
                     class="fa-primary"></path>
                 </g>
               </svg>
-
                             <span class="link-text">Go TO...</span>
                         </a>
                     </li>
-
                     <!--============================================-->
                     <li class="ss-navs-item">
                         <a id="ss-calender" href="#" class="nav-link">
@@ -65,7 +61,7 @@
                         </a>
                     </li>
                     <li class="ss-navs-item">
-                        <a id="ss-calender" href="#" class="nav-link">
+                        <a id="ss-calender" href="/aboutus" class="nav-link">
                             <svg height="30" width="200">
                                 <text x="0" y="30" fill="white">5</text>
                               </svg>
@@ -74,77 +70,42 @@
                     </li>
     </header>
     <main>
-
         <div class="b">
             <p></p>
-
         </div>
         <div class="allbox">
             <div class='cd'>
-
                 <h2> Search By a name Of charecter </h2>
                 <form id="form" action="/searches" method="post">
                     <input id="thesearchbox" name="search" placeholder='Enter a name of marvel ' style="color: black;" />
                     <br><br>
-
-                    <!-- <label class="container">Title
-                      <input type="radio" name="searchtype" value="title">
-                      <span class="checking"></span>
-                    </label>
-              
-                    <label class="container">Author
-                      <input type="radio" name="searchtype" value="author">
-                      <span class="checking"></span>
-                    </label> -->
-
                     <button id=button> Search The MARVEL API</button><br><br>
-                    <<<<<<< HEAD </form>
+                </form>
             </div>
         </div>
-        <!-- <div class="c"><p>c</p></div>
-=======
-                  </form>
-                </div></div>
-
-                <div class="center">
-                  <% if(marvels){ marvels.forEach(
+        </form>
+        </div>
+        </div>
+        <div class="center">
+            <% if(marvels){ marvels.forEach(
                     (marvel) => { console.log(marvel); %>
-                      <img class="m-image" src=<%=marvel.image %>><br>
-                      <p class="m-title">Name :  <%= marvel.name %></p><br><br>
-                      <p class="m-title"> Description :  <%= marvel.description %></p><br><br>
-                      
-                <form action ='/searches' method="POST" class="booktitle">
-                  <input type="hidden" name="search" value="<%=marvel.name%>"/>
-                  <button class="m-title" type="submit"> View Details </button>
-
-      
-              </form>
-              <form action ='/delete' method="POST" class="booktitle">
-                <input type="hidden" name="id" value="<%=marvel.id%>"/>
-                <button class="m-title" type="submit"> Remove Marvel </button>
-
-    
-            </form>
-                    <%}
-
-                  );}%>
-                </div>
-                    <!-- <div class="c"><p>c</p></div>
->>>>>>> c70a806c452ef9dac635bfb28847cf5a683d83b3
-                    <div class="d"><p>d</p></div> -->
-        <!-- </div>   -->
-        <!-- <div class='efghbox'>
-                    
-                    <div class="e"><p>e</p></div>
-                    <div class="f"><p>f</p></div>
-                    <div class="g"><p>g</p></div>
-                    <div class="h"><p>h</p></div>
-                </div> -->
-        <!--            
-            <div class="ifooter"> -->
-        <!-- </div> -->
+                <img class="m-image" src=<%=marvel.image %>><br>
+                <p class="m-title">Name :
+                    <%= marvel.name %>
+                </p><br><br>
+                <p class="m-title"> Description :
+                    <%= marvel.description %>
+                </p><br><br>
+                <form action='/searches' method="POST" class="booktitle">
+                    <input type="hidden" name="search" value="<%=marvel.name%>" />
+                    <button class="m-title" type="submit"> View Details </button>
+                </form>
+                <form action='/delete' method="POST" class="booktitle">
+                    <input type="hidden" name="id" value="<%=marvel.id%>" />
+                    <button class="m-title" type="submit"> Remove Marvel </button>
+                </form>
+                <%} );}%>
     </main>
-
 </body>
 
 </html>
