--- a/views/movies-index.ejs
+++ b/views/movies-index.ejs
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <!-- <%- include('./layout/head') %> -->
+
     <link rel="stylesheet" href="../styles/movies.css">
     <link href="https://fonts.googleapis.com/css?family=Courier+Prime&display=swap" rel="stylesheet">
 </head>
 <header>
-    <!-- <%- include('./layout/header') %> -->
+
 </header>
 
 <body>
@@ -37,9 +37,9 @@
             <% }) %>
     </div>
     <script>
-        $('img').on('click', function() {
-            $(this).next('.desc').toggle();
-        })
+        // $('img').on('click', function() {
+        //     $(this).next('.desc').toggle();
+        // })
     </script>
 </body>
 
