--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,36 +4,21 @@
     <%- include('layout/head') %> 
      <link rel="stylesheet" href="styles/homeStyles.css">
 </head>
-
 <body>
- 
 <header>
     <%- include('layout/header') %> 
-
 </header>
 <main>
     <section class="container">
     <% favChar.forEach( element => { %>
-
          <div class="panel">
         <img src=<%= element.thumbnail%>>
-        <p class="text bottom-right" ><%= element.char_name %> </p>
+        <p class="text bottom-right"><%= element.char_name %> </p>
         <h1>Rate me Homie: <%= element.rating %> </h1>
     </div>
-         
-    <% }); %>  
-    </section>
-
+    <% }); %>
 </main>
-<footer></footer>
-
-
-
-
-
+<footer>
+</footer>
 </body>
-
-
-
-
 </html>
