--- a/views/pages/aboutUs.ejs
+++ b/views/pages/aboutUs.ejs
@@ -12,52 +12,59 @@
     </header>
 
     <main>
-        <div class="flip-card">
-            <div class="flip-card-inner">
-                <div class="flip-card-front">
-                    <img src="https://via.placeholder.com/" alt="front">
+        <div class="maincontainer">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="https://via.placeholder.com/" alt="front">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="https://via.placeholder.com/" alt="back">
+                    </div>
                 </div>
-                <div class="flip-card-back">
-                    <img src="https://via.placeholder.com/" alt="back">
+            </div>
+
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="https://via.placeholder.com/" alt="front">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="https://via.placeholder.com/" alt="back">
+                    </div>
+                </div>
+            </div>
+
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="https://via.placeholder.com/" alt="front">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="https://via.placeholder.com/" alt="back">
+                    </div>
+                </div>
+            </div>
+
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="https://via.placeholder.com/" alt="front">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="https://via.placeholder.com/" alt="back">
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="flip-card">
-            <div class="flip-card-inner">
-                <div class="flip-card-front">
-                    <img src="https://via.placeholder.com/" alt="front">
-                </div>
-                <div class="flip-card-back">
-                    <img src="https://via.placeholder.com/" alt="back">
-                </div>
-            </div>
-        </div>
-
-        <div class="flip-card">
-            <div class="flip-card-inner">
-                <div class="flip-card-front">
-                    <img src="https://via.placeholder.com/" alt="front">
-                </div>
-                <div class="flip-card-back">
-                    <img src="https://via.placeholder.com/" alt="back">
-                </div>
-            </div>
-        </div>
-
-        <div class="flip-card">
-            <div class="flip-card-inner">
-                <div class="flip-card-front">
-                    <img src="https://via.placeholder.com/" alt="front">
-                </div>
-                <div class="flip-card-back">
-                    <img src="https://via.placeholder.com/" alt="back">
-                </div>
-            </div>
-        </div>
-      
     </main>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.js"></script>
+    <script>
+        $('.flip-card').click(function () {
+            $(this).toggleClass('focus');
+        });
+    </script>
 </body>
 
 </html>
