--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <%- include('layout/head') %> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="styles/homeStyles.css">
+     
 </head>
 <body>
 <header>
+    <div id="header">
+       <p id="header-text"> Marvelation </p> 
+       
+    </div>
+
     <%- include('layout/header') %> 
 </header>
 <main>
+<span> Characters to know... </span>
+
     <section class="container">
     <% favChar.forEach( element => { %>
          <div class="panel">
         <img src=<%= element.thumbnail%>>
         <p class="text bottom-right"><%= element.char_name %> </p>
-        <h1>Rate me Homie: <%= element.rating %> </h1>
+        <!-- <h1>Rate me Homie: <%= element.rating %> </h1> -->
     </div>
     <% }); %>
 </main>
