--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/styles/css/layout.css">
     <link rel="stylesheet" href="/styles/css/modules.css">
     <link rel="stylesheet" href="/styles/css/nav1.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>    <img src="img/logo.png" alt="MARVELATION" id="pLogo">
@@ -38,7 +39,7 @@
           <li class="ss-navs-item">
             <a id="ss-calender" href="/" class="nav-link">
                 <svg height="30" width="200">
-                    <text x="0" y="30" fill="white">1</text>
+                    <text x="0" y="30" fill="white"><i ></i></text>
                   </svg>
                 <span class="link-text">HOME</span>
               </a>
@@ -46,7 +47,7 @@
             <li class="ss-navs-item">
                 <a id="ss-calender" href="search" class="nav-link">
                     <svg height="30" width="200">
-                        <text x="0" y="30" fill="white">2</text>
+                        <text x="0" y="30" fill="white"><i class="fas fa-search"></i></text>
                       </svg>
                     <span class="link-text">SEARCH</span>
                   </a>
@@ -54,7 +55,7 @@
                 <li class="ss-navs-item">
                     <a id="ss-calender" href="#" class="nav-link">
                         <svg height="30" width="200">
-                            <text x="0" y="30" fill="white">3</text>
+                            <text x="0" y="30" fill="white"><i class="fas fa-film"></i></text>
                           </svg>
                         <span class="link-text">MOVIES LIST</span>
                       </a>
@@ -62,7 +63,7 @@
                     <li class="ss-navs-item">
                         <a id="ss-calender" href="#" class="nav-link">
                             <svg height="30" width="200">
-                                <text x="0" y="30" fill="white">4</text>
+                                <text x="0" y="30" fill="white"><i class="fas fa-users"></i></text>
                               </svg>
                             <span class="link-text">CHAR BY GENER</span>
                           </a>
@@ -100,7 +101,7 @@
                   <button class="btn" type="submit"> View Details </button>
               </form>
                <form action ='/delete' method="POST" class="booktitle">
-                <input type="hidden" name="id" value="<%=marvel.id%>"/>
+                <input type="hidden" name="id" value="<%=marvel.id%>s"/>
                 <button class="btn" type="submit"> Remove Marvel </button>
             </form>
             <h2>rating<%=marvel.rating %></h2>
