--- a/views/movies-index.ejs
+++ b/views/movies-index.ejs
@@ -27,7 +27,7 @@
                         </p>
                     </div>
                     <div class='back-side'>
-                        <p>
+                        <p id='para'>
                             Plot:
                             <%=element.overview%>
                         </p>
