--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -34,7 +34,7 @@
                 </a>
             </li>
             <li class="ss-navs-item">
-                <a id="ss-calender" href="search" class="nav-link">
+                <a id="ss-calender" href="/search" class="nav-link">
                     <svg height="30" width="200">
                     <text x="0" y="30" fill="white">S</text>
                   </svg>
