--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -111,7 +111,7 @@
         <img class="marvelimage" src=<%=data.thumbnail %>><br>
 
             <div class="themarveldetails">
-                    <p class="p1"> ** character Details ** </p><br>
+                    <p class="p1"> * character Details * </p><br>
                     
                   
                     
