--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -32,9 +32,67 @@
     
         <!-- <h1> Best Character !</h1>
         <h1> <a href="/">Back to Home </a></h1> -->
-        <header>   
-                             
-          <%- include('../../layout/header') %>              
+        <header>    <img src="img/logo.png" alt="MARVELATION" id="pLogo">
+
+            <!--create a Responsive Navbar with CSS-->
+             <div class="ss-body">
+              <!--create abody Navbar with CSS-->
+            
+               <div class="ss-navs">
+                <ul class="ss-navs-nav">
+                  <li class="ss-logo">
+                    <a href="#" class="nav-link">
+                      <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="angle-double-right" role="img"
+                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+                        class="svg-inline--fa fa-angle-double-right fa-w-14 fa-5x">
+                        <g class="fa-group">
+                          <path fill="currentColor"
+                            d="M224 273L88.37 409a23.78 23.78 0 0 1-33.8 0L32 386.36a23.94 23.94 0 0 1 0-33.89l96.13-96.37L32 159.73a23.94 23.94 0 0 1 0-33.89l22.44-22.79a23.78 23.78 0 0 1 33.8 0L223.88 239a23.94 23.94 0 0 1 .1 34z"
+                            class="fa-secondary"></path>
+                          <path fill="currentColor"
+                            d="M415.89 273L280.34 409a23.77 23.77 0 0 1-33.79 0L224 386.26a23.94 23.94 0 0 1 0-33.89L320.11 256l-96-96.47a23.94 23.94 0 0 1 0-33.89l22.52-22.59a23.77 23.77 0 0 1 33.79 0L416 239a24 24 0 0 1-.11 34z"
+                            class="fa-primary"></path>
+                        </g>
+                      </svg>
+            
+                      <span class="link-text">Go TO...</span>
+                    </a>
+                  </li> 
+            
+                  <!--============================================-->
+                  <li class="ss-navs-item">
+                    <a id="ss-calender" href="/" class="nav-link">
+                        <svg height="30" width="200">
+                            <text x="0" y="30" fill="white">H</text>
+                          </svg>
+                        <span class="link-text">HOME</span>
+                      </a>
+                    </li>
+                    <li class="ss-navs-item">
+                        <a id="ss-calender" href="search" class="nav-link">
+                            <svg height="30" width="200">
+                                <text x="0" y="30" fill="white">S</text>
+                              </svg>
+                            <span class="link-text">SEARCH</span>
+                          </a>
+                        </li>
+                        <li class="ss-navs-item">
+                            <a id="ss-calender" href="#" class="nav-link">
+                                <svg height="30" width="200">
+                                    <text x="0" y="30" fill="white">M</text>
+                                  </svg>
+                                <span class="link-text">MOVIES LIST</span>
+                              </a>
+                            </li>
+                            <li class="ss-navs-item">
+                              <a id="ss-calender" href="/aboutus" class="nav-link">
+                                  <svg height="30" width="200">
+                                          <text x="0" y="30" fill="white">A</text>
+                                        </svg>
+                                  <span class="link-text">ABOUT US</span>
+                              </a>
+                          </li>
+                                 
     </header>
     <main>
         <h2> Search Results </h2>
@@ -45,7 +103,7 @@
         <img class="marvelimage" src=<%=data.thumbnail %>><br>
 
             <div class="themarveldetails">
-                    <p class="p1"> ** character Details ** </p><br>
+                    <p class="p1"> * character Details * </p><br>
                     
                   
                     
