--- a/public/styles/css/base.css
+++ b/public/styles/css/base.css
@@ -289,6 +289,34 @@ border:1 px solid whitesmoke;
        border-radius: 10px;
        grid-row-gap: 80pxpx;
 }
+
+.toggle{
+
+    width:180px;
+    /* margin-left: 50px; */
+    margin-top: 10px;
+    margin-left: 30px;
+    float: left;
+    border-radius: 20px;
+    height: 40px;
+    color: darkred;
+    font-size: 18px;
+    font-weight: bolder;
+    padding: 10px;
+
+}
+
+h3{
+    margin-right: 20px;
+    margin-top: 40px;
+    color: whitesmoke;
+    font-size: 24px;
+    
+
+
+}
+
+
 /* main {
     margin-left: 16rem;
     padding: 1rem;
