--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,5 +1,3 @@
-<!-- <img src="img/logo.png" alt="MARVELATION" id="pLogo"> -->
-
 <!--create a Responsive Navbar with CSS-->
 <div class="ss-body">
     <!--create abody Navbar with CSS-->
@@ -26,41 +24,26 @@
             <!--============================================-->
             <li class="ss-navs-item">
                 <a id="ss-calender" href="/" class="nav-link">
-                    <svg height="30" width="200" class="fas fa-home">
-                <text x="0" y="30" fill="white">1</text>
-              </svg>
+                    <i class="fas fa-home" style="font-size: 40px; margin-left: 11px;"></i>
                     <span class="link-text">HOME</span>
                 </a>
             </li>
             <li class="ss-navs-item">
                 <a id="ss-calender" href="/search" class="nav-link">
-                    <svg height="30" width="200">
-                    <text x="0" y="30" fill="white">2</text>
-                  </svg>
+                    <i class="fab fa-searchengin" style="font-size: 40px; margin-left: 18px;"></i>
                     <span class="link-text">SEARCH</span>
                 </a>
             </li>
             <li class="ss-navs-item">
                 <a id="ss-calender" href="/moviespage" class="nav-link">
-                    <svg height="30" width="200">
-                        <text x="0" y="30" fill="white">3</text>
-                      </svg>
+                    <i class="fas fa-file-video"  style="font-size: 40px; margin-left: 18px;"></i> 
                     <span class="link-text">MOVIES LIST</span>
                 </a>
             </li>
-            <li class="ss-navs-item">
-                <a id="ss-calender" href="#" class="nav-link">
-                    <svg height="30" width="200">
-                            <text x="0" y="30" fill="white">4</text>
-                          </svg>
-                    <span class="link-text">CHAR BY GENER</span>
-                </a>
-            </li>
+
             <li class="ss-navs-item">
                 <a id="ss-calender" href="/aboutus" class="nav-link">
-                    <svg height="30" width="200">
-                            <text x="0" y="30" fill="white">5</text>
-                          </svg>
+                    <i class="fas fa-users" style="font-size: 40px; margin-left: 18px;" ></i>
                     <span class="link-text">ABOUT US</span>
                 </a>
             </li>
