--- a/public/styles/css/layout.css
+++ b/public/styles/css/layout.css
@@ -1,27 +1,81 @@
-
-
-
-.b{
-  width: 100%;
-  height: 25%;
- 
- 
- 
- 
+#header {
+  /* background: url(../../images/potato.png); */
+  background-color: darkred;
+  opacity: 1.5;
+  text-align: center;
+  height: 136px;
+  background-size: cover;
+  background-position: center;
+  /* width: 0; */
+  margin-left: -14rem;
+  margin-top: -56px;
 }
+
+#header-text {
+  padding: 47px;
+  font-size: -webkit-xxx-large;
+  font-family: "Bangers";
+  margin: 0 0 -1em 0;
+  text-shadow: -1px -1px yellow, 1px 1px orange, 2px 2px orange;
+  -webkit-transform: rotate(-10deg) skew(-10deg, 0);
+  -moz-transform: rotate(-10deg) skew(-10deg, 0);
+  -ms-transform: rotate(-10deg) skew(-10deg, 0);
+  -o-transform: rotate(-10deg) skew(-10deg, 0);
+  transform: rotate(-10deg) skew(-10deg, 0);
+  padding-bottom: 42px;
+  /* float: left; */
+  font-weight: 900;
+  width: 100%;
+  margin-top: 21px;
+}
+
+
+#container-for-search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* flex-direction: column; */
+  margin-top: 260px;
+  margin-left: -225px;
+  flex-wrap: wrap;
+}
+body{
+  background-color: #131311 ;
+  overflow-x: hidden;
+}
+main{
+  margin-left: 5rem;
+}
+.a7a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: darkred;
+  opacity: 0.7;
+  margin: 15px;
+  /* border-radius: 17%; */
+  height: 800px;
+  width: 310px;
+}
+
 .allbox{
   width: 100%;
   height: 75%;
 }
-.cd{
+
+.cd {
+  /* SIZE: B4; */
   display: grid;
   grid-template-rows: 50% 50%;
-  height: 50%;
+  height: 45vh;
   background-color: darkred;
-  margin-top: 10px;
-  opacity: 0.5;
+  margin-top: -4px;
+  opacity: 0.7;
+  width: 169%;
+  margin-left: 28rem;
 }
-
 .c,.d{
   width: 100%;
   height: 100%;
@@ -60,6 +114,7 @@
   }
 
 } */
+                                         }
 
 /* desktop */
 @media screen and (min-width:768px) and (max-width:960px){
@@ -67,17 +122,17 @@
       display: grid;
       grid-template-columns: 25% 25% 25% 25%;
       grid-template-rows: none;
-      height: 100%;
-  }
+      height: 100%; */
+  /* }
   .cd{
       display: grid;
       grid-template-columns: 50% 50%;
       grid-template-rows: none;
       height: 100%;
-  }
+  } */
 
 
-} */
+/* } */
 
 .cd{
   display: grid;
@@ -86,4 +141,4 @@
   height: 100%;
 }
 
-}
+                                                     }
