--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://kit.fontawesome.com/a20d671700.js" crossorigin="anonymous"></script>
 
     <%- include('layout/head') %> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
      <link rel="stylesheet" href="styles/homeStyles.css">
+     <link href="https://fonts.googleapis.com/css?family=Courier+Prime&display=swap" rel="stylesheet">
      
 </head>
 <body>
@@ -24,7 +26,6 @@
          <div class="panel">
         <img src=<%= element.thumbnail%>>
         <p class="text bottom-right"><%= element.char_name %> </p>
-        <!-- <h1>Rate me Homie: <%= element.rating %> </h1> -->
     </div>
     <% }); %>
 </main>
