--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,116 +2,65 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MARVELATION</title>
-    <link rel="stylesheet" href="/styles/css/reset.css">
-    <link rel="stylesheet" href="/styles/css/base.css">
-    <link rel="stylesheet" href="/styles/css/layout.css">
-    <link rel="stylesheet" href="/styles/css/modules.css">
-    <link rel="stylesheet" href="/styles/css/nav1.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MARVELATION</title>
+  <link rel="stylesheet" href="/styles/css/reset.css">
+  <link rel="stylesheet" href="/styles/css/base.css">
+  <link rel="stylesheet" href="/styles/css/layout.css">
+  <link rel="stylesheet" href="/styles/css/modules.css">
+  <link rel="stylesheet" href="/styles/nav1.css">
+  <script src="https://kit.fontawesome.com/a20d671700.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header> <img src="img/logo.png" alt="MARVELATION" id="pLogo">
-        <!--create a Responsive Navbar with CSS-->
-        <div class="ss-body">
-            <!--create abody Navbar with CSS-->
-            <div class="ss-navs">
-                <ul class="ss-navs-nav">
-                    <li class="ss-logo">
-                        <a href="#" class="nav-link">
-                            <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="angle-double-right" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-angle-double-right fa-w-14 fa-5x">
-                <g class="fa-group">
-                  <path fill="currentColor"
-                    d="M224 273L88.37 409a23.78 23.78 0 0 1-33.8 0L32 386.36a23.94 23.94 0 0 1 0-33.89l96.13-96.37L32 159.73a23.94 23.94 0 0 1 0-33.89l22.44-22.79a23.78 23.78 0 0 1 33.8 0L223.88 239a23.94 23.94 0 0 1 .1 34z"
-                    class="fa-secondary"></path>
-                  <path fill="currentColor"
-                    d="M415.89 273L280.34 409a23.77 23.77 0 0 1-33.79 0L224 386.26a23.94 23.94 0 0 1 0-33.89L320.11 256l-96-96.47a23.94 23.94 0 0 1 0-33.89l22.52-22.59a23.77 23.77 0 0 1 33.79 0L416 239a24 24 0 0 1-.11 34z"
-                    class="fa-primary"></path>
-                </g>
-              </svg>
-                            <span class="link-text">Go TO...</span>
-                        </a>
-                    </li>
-                    <!--============================================-->
-                    <li class="ss-navs-item">
-                        <a id="ss-calender" href="/" class="nav-link">
-                            <svg height="30" width="200">
-                    <text x="0" y="30" fill="white">H</text>
-                  </svg>
-                            <span class="link-text">HOME</span>
-                        </a>
-                    </li>
-                    <li class="ss-navs-item">
-                        <a id="ss-calender" href="search" class="nav-link">
-                            <svg height="30" width="200">
-                        <text x="0" y="30" fill="white">S</text>
-                      </svg>
-                            <span class="link-text">SEARCH</span>
-                        </a>
-                    </li>
-                    <li class="ss-navs-item">
-                        <a id="ss-calender" href="/moviespage" class="nav-link">
-                            <svg height="30" width="200">
-                            <text x="0" y="30" fill="white">M</text>
-                          </svg>
-                            <span class="link-text">MOVIES LIST</span>
-                        </a>
-                    </li>
+  <header>
+    <div id="header">
+      <p id="header-text"> Marvelation </p>
 
-                    <li class="ss-navs-item">
-                        <a id="ss-calender" href="/aboutus" class="nav-link">
-                            <svg height="30" width="200">
-                                <text x="0" y="30" fill="white">A</text>
-                              </svg>
-                            <span class="link-text">ABOUT US</span>
-                        </a>
-                    </li>
-    </header>
-    <main>
-        <div class="b">
-            <p></p>
+    </div>
+    <%- include('layout/header') %>
+  </header>
+  <main>
+
+    <section id="serach-container">
+      <div class="allbox">
+        <div class='cd'>
+          <h2> Search By a name Of charecter </h2>
+          <form id="form" action="/searches" method="post">
+            <input id="thesearchbox" name="search" placeholder='Enter a name of marvel ' style="color: black;" />
+            <br><br>
+            <button id=button> Search The MARVEL API</button><br><br>
+          </form>
         </div>
-        <div class="allbox">
-            <div class='cd'>
-                <h2> Search By a name Of charecter </h2>
-                <form id="form" action="/searches" method="post">
-                    <input id="thesearchbox" name="search" placeholder='Enter a name of marvel ' style="color: black;" />
-                    <br><br>
-                    <button id=button> Search The MARVEL API</button><br><br>
-                </form>
-            </div>
-        </div>
-        <div class="center">
-            <% if(marvels){ marvels.forEach(
-                    (marvel) => { console.log(marvel); %>
-                <div class="flex">
-                    <img class="m-image" src=<%=marvel.image %>><br>
-                    <p class="m-title">Name :
-                        <%= marvel.name %>
-                    </p><br><br>
-                    <p class="m-title"> Description :
-                        <%= marvel.description %>
-                    </p><br><br>
-                    <form action='/searches' method="POST" class="booktitle">
-                        <input type="hidden" name="search" value="<%=marvel.name%>" />
-                        <button class="btn" type="submit"> View Details </button>
-                    </form>
-                    <form action='/delete' method="POST" class="booktitle">
-                        <input type="hidden" name="id" value="<%=marvel.id%>" />
-                        <button class="btn" type="submit"> Remove Marvel </button>
-                    </form>
-                    <h3>rating
-                        <%=marvel.rating %>
-                    </h3>
-                    <button class="toggle" type="submit">Rate me </button>
-                    <form action="/update/<%= marvel.id%>?_method=PUT" method="POST" class="toggleform">
-                        <input type="number" name="ratingvalue" value="" placeholder="<%=marvel.rating%>" min="0" max="100">
-                        <button class="reload" type="submit">Rate</button>
-                    </form>
-                    <%} );}%>
-    </main>
+      </div>
+    </section>
+    <section id="container-for-search">
+      <% if(marvels){ marvels.forEach((marvel) =>{ %>
+      <div class="a7a">
+        <img class="m-image" src=<%=marvel.image %>>
+        <p class="m-title">Name : <%= marvel.name %> </p>
+
+        <p class="m-title"> Description : <%= marvel.description %> </p>
+
+        <form action='/searches' method="POST" class="booktitle">
+          <input type="hidden" name="search" value="<%=marvel.name%>" />
+          <button class="btn" type="submit"> View Details </button>
+        </form>
+        <form action='/delete' method="POST" class="booktitle">
+          <input type="hidden" name="id" value="<%=marvel.id%>" />
+          <button class="btn" type="submit"> Remove Marvel </button>
+        </form>
+        <h3>Rating: <%=marvel.rating %></h3>
+        <button class="toggle" type="submit">Rate me </button>
+        <form action="/update/<%= marvel.id%>?_method=PUT" method="POST" class="toggleform">
+          <input type="number" name="ratingvalue" value="" placeholder="<%=marvel.rating%>" min="0" max="100">
+          <button class="reload" type="submit">Rate</button>
+        </form>
+      </div>
+      <%} );}%>
+    </section>
+  </main>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.js"></script>
 <script src="js/app.js"></script>
