--- a/views/pages/aboutUs.ejs
+++ b/views/pages/aboutUs.ejs
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <script src="https://kit.fontawesome.com/a20d671700.js" crossorigin="anonymous"></script>
+
     <%- include('../layout/head') %>
     <link rel="stylesheet" href="styles/aboutus.css">
 </head>
@@ -16,10 +18,10 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="https://via.placeholder.com/" alt="front">
+                        <img src="/images/anolla.jpg" alt="front">
                     </div>
                     <div class="flip-card-back">
-                        <img src="https://via.placeholder.com/" alt="back">
+                        <img src="/images/anolla2.jpeg" alt="back">
                     </div>
                 </div>
             </div>
@@ -27,10 +29,10 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="https://via.placeholder.com/" alt="front">
+                        <img src="/images/sahar2.jpg" alt="front">
                     </div>
                     <div class="flip-card-back">
-                        <img src="https://via.placeholder.com/" alt="back">
+                        <img src="/images/sahar3.jpeg" alt="back">
                     </div>
                 </div>
             </div>
@@ -38,10 +40,10 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="https://via.placeholder.com/" alt="front">
+                        <img src="/images/amer2.webp" alt="front">
                     </div>
                     <div class="flip-card-back">
-                        <img src="https://via.placeholder.com/" alt="back">
+                        <img src="/images/amer2.jpeg" alt="back">
                     </div>
                 </div>
             </div>
@@ -49,10 +51,10 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="https://via.placeholder.com/" alt="front">
+                        <img src="/images/me.jpg" alt="front">
                     </div>
                     <div class="flip-card-back">
-                        <img src="https://via.placeholder.com/" alt="back">
+                        <img src="/images/me2.jpeg" alt="back">
                     </div>
                 </div>
             </div>
